# ImageProcessing

./: ChangeLog.md  ImageProcessing.cabal  package.yaml  stack.yaml
app/: CommandHelper.hs  Convertion.hs  ImageManipulation.hs  Main.hs
src/: Convertion.hs  ImageManipulation.hs  Main.hs
