name:                ImageProcessing
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ImageProcessing#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

data-files:
  bitmaps/computer.ico
  bitmaps/disk.ico
  bitmaps/eye.ico
  bitmaps/file.ico
  bitmaps/fileopen16.png
  bitmaps/f_closed.ico
  bitmaps/f_open.ico
  bitmaps/hsicon.ico
  bitmaps/wxwin.ico
  bitmaps/wxwin16.png

source-repository head
  type: git
  location: https://github.com/githubuser/ImageProcessing

executable ImageProcessing
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules: 
      ImageManipulation 
      Convertion 
  build-depends:             
      JuicyPixels,
      base,
      reactive-banana ,
      reactive-banana-wx ,
      wxcore,
      wx
