name:                ImageProcessing
version:             0.1.0.0
description:         Application to open and process images.
homepage:            https://github.com/gormacc/ImageProcessing#readme
license:             BSD3
license-file:        LICENSE
author:              Maciej Gorczyca
maintainer:          example@example.com
copyright:           2018 Maciej Gorczyca
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

data-files:
  bitmaps/eye.ico
  bitmaps/rotate24.png
  bitmaps/fileopen16.png
  bitmaps/wxwin16.png

source-repository head
  type: git
  location: https://github.com/gormacc/ImageProcessing

executable ImageProcessing
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules: 
      ImageManipulation 
      Convertion
  ghc-options: -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N  
  build-depends:             
      JuicyPixels,
      base,
      primitive ,
      matrix ,
      filepath ,
      reactive-banana ,
      reactive-banana-wx,
      wxcore,
      wx
